улучшены анимации, newletter, footer и заменено дублирующееся изображение

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
                 </article>
 
                 <article class="card">
-                    <img src="assets/img/product-vase-rustic.webp" alt="Ваза Rustic Vase Set" class="card__image">
+                    <img src="assets/img/product-vase-rustiс.webp" alt="Ваза Rustic Vase Set" class="card__image">
                     <h3 class="card__title">Набор ваз Rustic</h3>
                     <p class="card__price">$155</p>
                 </article>
 
                 <article class="card">
-                    <img src="assets/img/product-vase-rustic.webp" alt="Ваза The Silky Vase" class="card__image">
+                    <img src="assets/img/product-vase-silky.webp" alt="Ваза The Silky Vase" class="card__image">
                     <h3 class="card__title">Ваза Silky</h3>
                     <p class="card__price">$125</p>
                 </article>
@@ -135,11 +135,13 @@
         </section>
 
         <section class="newsletter" id="newsletter">
-            <h2 class="newsletter__title">Вступайте в&nbsp;клуб и&nbsp;получайте преимущества</h2>
-            <p class="newsletter__text">Подпишитесь на&nbsp;нашу рассылку и&nbsp;получайте эксклюзивные предложения по&nbsp;новым коллекциям, распродажам, pop-up магазинам и&nbsp;многому другому.</p>
-            <div class="newsletter__form">
-                <input type="email" required placeholder="your@email.com" class="newsletter__input">
-                <button type="submit" class="button">Подписаться</button>
+            <div class="newsletter__inner">
+                <h2 class="newsletter__title">Вступайте в&nbsp;клуб и&nbsp;получайте преимущества</h2>
+                <p class="newsletter__text">Подпишитесь на&nbsp;нашу рассылку и&nbsp;получайте эксклюзивные предложения по&nbsp;новым коллекциям, распродажам, pop-up магазинам и&nbsp;многому другому.</p>
+                <div class="newsletter__form">
+                    <input type="email" required placeholder="your@email.com" class="newsletter__input">
+                    <button type="submit" class="button">Подписаться</button>
+                </div>
             </div>
         </section>
 
@@ -148,14 +150,14 @@
                 <h2 class="story__title">От&nbsp;студии в&nbsp;Лондоне до&nbsp;глобального бренда с&nbsp;более чем 400 магазинами</h2>
                 <p class="story__text">Когда мы&nbsp;основали Avion, идея была проста: сделать качественную мебель доступной для массового рынка.</p>
                 <p class="story__text">Мебель и&nbsp;товары для дома ручной работы&nbsp;&mdash; это&nbsp;то, чем мы&nbsp;живем, дышим и&nbsp;что создаем. Наш бутик в&nbsp;Челси стал центром притяжения для лондонского сообщества дизайнеров интерьера.</p>
-                <a href="#contact" class="button button--light">Связаться с нами</a>
+                <button type="button" class="button button--light">Связаться с нами</button>
             </div>
             <img src="assets/img/story-interior.webp" alt="Интерьер студии Avion" class="story__image">
         </section>
 
     </main>
 
-    <footer class="footer" id="contact">
+    <footer class="footer">
         
         <div class="footer__content">
             <nav class="footer__nav">
